fix(frontend): fix DialogBox z-index

--- a/frontend/src/style/DialogBox.css
+++ b/frontend/src/style/DialogBox.css
@@ -1,4 +1,5 @@
 .blur-container {
+	z-index: 1000;
 	width: 100%;
 	height: 100%;
 	position: fixed;
